Fixed the warning
Fixed the warning it was showing during the compilation. The way Integer object in the file was create is declared deprecated by now. So, had to update it with recommended practice.